# erdtree

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  erdtree.yml  publish.yml  test.yml
example/: .erdtree.toml  .erdtreerc
scripts/: performance_metrics.sh
src/: ansi.rs  cli.rs  error.rs  icon.rs  icons.rs  lib.rs  logging.rs  main.rs  perf.rs  progress.rs  tty.rs  utils.rs
src/cli/: mod.rs
src/context/: args.rs  color.rs  column.rs  config.rs  error.rs  layout.rs  mod.rs  output.rs  sort.rs  test.rs  time.rs
src/context/config/: mod.rs  rc.rs
src/context/config/toml/: error.rs  mod.rs  test.rs
src/disk/: mod.rs  prefix.rs
src/disk_usage/: file_size.rs  logical.rs  mod.rs  physical.rs  units.rs
src/disk_usage/file_size/: block.rs  byte.rs  line_count.rs  mod.rs  word_count.rs
src/file/: inode.rs  mod.rs  order.rs
src/file/tree/: filter.rs  mod.rs  traverse.rs
src/file/unix/: mod.rs  ug.rs  xattr.rs
src/file/unix/permissions/: class.rs  file_type.rs  mod.rs  test.rs
src/file_tree/: error.rs  mod.rs  sort_type.rs  tree_node.rs
src/fs/: disk_usage.rs  error.rs  file_size.rs  inode.rs  mod.rs  ug.rs  xattr.rs
src/fs/erdtree/: disk_usage.rs  mod.rs  node.rs  order.rs  test.rs  tree.rs
src/fs/erdtree/tree/: mod.rs  test.rs  ui.rs
src/fs/permissions/: class.rs  error.rs  file_type.rs  mod.rs  mode.rs  test.rs
src/icons/: fs.rs  mod.rs
src/render/: disk_usage.rs  mod.rs  node.rs  order.rs  styles.rs  theme.rs
src/render/context/: config.rs  dir.rs  error.rs  file.rs  mod.rs  output.rs  sort.rs  test.rs  time.rs
src/render/disk_usage/: file_size.rs  mod.rs
src/render/display/: flat.rs  inverted.rs  mod.rs  regular.rs
src/render/grid/: cell.rs  mod.rs
src/render/layout/: flat.rs  flat_inverted.rs  inverted.rs  mod.rs  regular.rs
src/render/long/: mod.rs
src/render/row/: long.rs  mod.rs
src/render/styles/: mod.rs
src/render/tree/: count.rs  display.rs  error.rs  mod.rs  node.rs  report.rs  ui.rs  visitor.rs
src/render/tree/display/: mod.rs  theme.rs
src/render/tree/node/: cmp.rs  display.rs  layout.rs  mod.rs  output.rs  style.rs
src/render/tree/node/display/: mod.rs  presenters.rs
src/styles/: error.rs  mod.rs
src/tree/: count.rs  error.rs  mod.rs  parallel.rs  traverse.rs  visitor.rs  walker.rs
src/tree/display/: column.rs  mod.rs  theme.rs
src/tree/node/: cmp.rs  mod.rs  style.rs  unix.rs
src/tree/node/display/: mod.rs  presenters.rs
src/tree/traversal/: mod.rs  single_threaded.rs
src/tty/: mod.rs  unix.rs  windows.rs
src/user/: args.rs  column.rs  mod.rs  test.rs
src/user/config/: mod.rs  parse.rs  test.rs  toml.rs
src/utils/: bytes.rs
tests/: dirs_only.rs  file_count.rs  flat.rs  gitignore.rs  glob.rs  hardlink.rs  level.rs  line_count.rs  prune.rs  regex.rs  report.rs  size_left.rs  sort.rs  suppress_size.rs  symlink.rs
tests/data/: .dagon  .erdtreerc  .gitignore  b.txt  necronomicon.txt  nemesis.txt  nylarlathotep.txt
tests/data/dream_cycle/: polaris.txt
tests/data/nested/: other.md
tests/data/the_yellow_king/: cassildas_song.md
tests/hardlinks/: kadath.txt
tests/utils/: mod.rs
