[package]
name = "erdtree"
version = "1.5.0"
edition = "2021"
authors = ["Benjamin Nguyen <benjamin.van.nguyen@gmail.com>"]
description = """
erdtree (et) is vibrant multi-threaded filetree visualizer and disk usage analyzer
that respects .gitignore and hidden file rules by default.
"""
documentation = "https://github.com/solidiquis/erdtree"
homepage = "https://github.com/solidiquis/erdtree"
repository = "https://github.com/solidiquis/erdtree"
keywords = ["tree", "commandline", "command-line", "du", "disk-usage"]
exclude = ["assets/*"]
readme = "README.md"
license = "MIT"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "et"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.1.1", features = ["derive"] }
crossbeam = "0.8.2"
filesize = "0.2.0"
ignore = "0.4.2"
lscolors = { version = "0.13.0", features = ["ansi_term"] }
once_cell = "1.17.0"

[dev-dependencies]
indoc = "2.0.0"
strip-ansi-escapes = "0.1.1"
tempdir = "0.3"
