[package]
name = "erdtree"
version = "3.0.1"
edition = "2021"
authors = ["Benjamin Nguyen <benjamin.van.nguyen@gmail.com>"]
description = """
erdtree (erd) is a cross-platform, multi-threaded, and general purpose
filesystem and disk usage utility that is aware of .gitignore and hidden file rules.
"""
categories = ["command-line-utilities"]
documentation = "https://github.com/solidiquis/erdtree"
homepage = "https://github.com/solidiquis/erdtree"
repository = "https://github.com/solidiquis/erdtree"
keywords = ["tree", "find", "ls", "du", "commandline"]
exclude = ["assets/*", "scripts/*"]
readme = "README.md"
license = "MIT"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "erd"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.24"
clap = { version = "4.1.1", features = ["derive"] }
clap_complete = "4.1.1"
crossterm = "0.26.1"
dirs = "5.0"
errno = "0.3.1"
filesize = "0.2.0"
ignore = "0.4.2"
indextree = "4.6.0"
lscolors = { version = "0.13.0", features = ["ansi_term"] }
once_cell = "1.17.0"
regex = "1.7.3"
thiserror = "1.0.40"

[target.'cfg(unix)'.dependencies]
libc = "0.2.141"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
indoc = "2.0.0"
strip-ansi-escapes = "0.1.1"
tempfile = "3.4.0"
